# cas-za-obracun

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  main.cpp  serialization.md  test_msg.py  testing.md  vcpkg.json
assets/data/: map_data.xml  tmp_map.xml
assets/map/: mapa.tmx  mapa_01_2025-03-22.tmx  mapa_02_2025-03-22.tmx  untitled.tiled-session
assets/map/generator/: input.xml  output.xml  tile_generator.py
cmake/Modules/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_net.cmake  FindSDL2_ttf.cmake
docs/: CZO_specifikacije.docx  draft.md  specifiactions-server.md  specifications-client.md  strokovno_porocilo - Copy.docx  strokovno_porocilo.docx
include/: Containers.hpp  Game.hpp  Logger.hpp
include/Communication/: PacketHandler.hpp  PacketTypes.hpp  SocketHandler.hpp  SocketListener.hpp  SocketSpeaker.hpp
include/Game/: EventHandler.hpp  Flag.hpp  GameObject.hpp  LocalPlayer.hpp  Projectile.hpp  RemotePlayer.hpp  Site.hpp
include/Game/Map/: Barrier.hpp  MapData.hpp  MapObject.hpp  StaticTexture.hpp  Trap.hpp
include/Game/Rendering/: RenderingContext.hpp
include/Logging/: Config.hpp  Logger.hpp
include/Rendering/: RenderWindow.hpp  RenderingContext.hpp
include/UI/: UIManager.hpp
include/Utilities/: AssetManager.hpp  Constants.hpp  Utility.hpp
src/: Containers.cpp  Game.cpp  SocketHandler.cpp  SocketListener.cpp  SocketSpeaker.cpp  Utility.cpp
src/Communication/: PacketHandler.cpp  PacketTypes.cpp  SocketHandler.cpp
src/Game/: EventHandler.cpp  Flag.cpp  LocalPlayer.cpp  Projectile.cpp  RemotePlayer.cpp  Site.cpp
src/Game/Map/: Barrier.cpp  MapData.cpp  Trap.cpp
src/Game/Rendering/: RenderWindow.cpp  RenderingContext.cpp
src/Rendering/: RenderWindow.cpp  RenderingContext.cpp
src/UI/: UIManager.cpp
src/Utilities/: AssetManager.cpp  Utility.cpp
src/XML/: tinyxml2.cpp
